fix: fix layout issues

--- a/packages/modules/data-widgets/src/themesource/datawidgets/web/_datagrid.scss
+++ b/packages/modules/data-widgets/src/themesource/datawidgets/web/_datagrid.scss
@@ -569,6 +569,11 @@ $root: ".widget-datagrid";
     padding: var(--spacing-small) 0;
 }
 
+:where(#{$root}-pb-middle) {
+    display: flex;
+    justify-content: center;
+}
+
 :where(#{$root}-pb-start, #{$root}-tb-start) {
     padding-inline: var(--spacing-medium);
     display: flex;
@@ -583,6 +588,7 @@ $root: ".widget-datagrid";
     padding: 0.3em 0.5em;
     border-radius: 6px;
     display: inline-block;
+    white-space: nowrap;
 
     &:hover,
     &:focus-visible {
